--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
     "require": {
         "php": "^8.2",
         "firebase/php-jwt": "^6.11",
+        "fruitcake/php-cors": "^1.3",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "nelmio/cors-bundle": "^2.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
